# ppbar

./: CMakeLists.txt  LICENSE  README.md
examples/: example.cpp
include/ppbar/: common.hpp  iterators.hpp  ppbar.hpp  progress_bar.hpp  progress_bar_base.hpp  widgets.hpp
src/: iterators.cpp  ppbar.cpp  progress_bar.cpp  widgets.cpp
